# stop_whatch

./: .gitignore  CMakeLists.txt
src/: abstractclock.cpp  abstractclock.h  analogclock.cpp  analogclock.h  digitalchrono.cpp  digitalchrono.h  digitalclock.cpp  digitalclock.h  logos.cpp  logos.h  logosdisplay.cpp  logosdisplay.h  main.cpp  stopwhatch.cpp  stopwhatch.h  stopwhatch.ui
